--- a/near-friendly/src/app/channel/channel.component.html
+++ b/near-friendly/src/app/channel/channel.component.html
@@ -1,5 +1,13 @@
-<div>
+<div class='channel-style'>
     <h3>{{name}}</h3>
-    <p>yayks i'm the channel component and all, all day long i do nothing but procrastinate ! 
-    </p>
+    <ul>
+        <li *ngFor="let channel of channels">
+          <md-card>
+            <md-card-title>{{channel.name}}</md-card-title>   
+            <md-card-content>
+            <p>{{channel.description}}</p>
+            </md-card-content>
+          </md-card>
+        </li>
+    </ul>
 </div>
