configure login routing

--- a/near-friendly/src/app/near.component.html
+++ b/near-friendly/src/app/near.component.html
@@ -1,8 +1,3 @@
-<!-- navigation bar -->
-<near-nav></near-nav>
-<md-sidenav-container>
-  <near-side-nav></near-side-nav>
-  <div class="my-content">
-    <router-outlet></router-outlet>
-  </div>
-</md-sidenav-container>
+<div>
+  <router-outlet></router-outlet>
+</div>
