some refactoring, adding spinner service and some view layouts

--- a/near-friendly/src/app/core/container/container.component.html
+++ b/near-friendly/src/app/core/container/container.component.html
@@ -1,4 +1,4 @@
-<near-nav></near-nav>
+<near-nav (menuClicked)="onMenuClicked()"></near-nav>
 <md-sidenav-container>
   <near-side-nav></near-side-nav>
   <div class="my-content">
