--- a/near-friendly/src/styles.scss
+++ b/near-friendly/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 // @import '~https://fonts.googleapis.com/icon?family=Material+Icons';  TODO: check why not working
-@import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
+@import '~@angular/material/core/theming/prebuilt/indigo-pink.scss';
  
 body {
   margin: 10;
